Added more social links on footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,15 +27,17 @@
             <div class="footer">
               <div class="contact">
                 <p>
-                  Your Name<br />
-                  What You Are<br />
-                  your@email.com
+                  <strong>Mikael Carrara</strong><br />
+                  UX Designer, HE:labs &amp; Co-Founder, Coora.<br />
+                  mikael@mikaelcarrara.com
                 </p>
               </div>
               <div class="contact">
                 <p>
-                  <a href="http://github.com/yourusername/">github.com/yourusername</a><br />
-                  <a href="http://twitter.com/yourusername/">twitter.com/yourusername</a><br />
+                  <a href="http://github.com/mikaelcarrara/">github.com/mikaelcarrara</a><br />
+                  <a href="http://dribbble.com/mikaelcarrara/">dribbble.com/mikaelcarrara</a><br />
+                  <a href="http://twitter.com/mikaelcarrara/">twitter.com/mikaelcarrara</a><br />
+                  <a href="https://angel.co/mikaelcarrara">angel.co/mikaelcarrara</a>
                 </p>
               </div>
             </div>
