--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,48 +1,77 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.title }}</title>
-        <meta name="viewport" content="width=device-width">
+<html lang="pt-br">
 
-        <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="/css/syntax.css">
+<head>
 
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="/css/main.css">
+  <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
 
-    </head>
-    <body>
+  <meta http-equiv="content-language" content="pt-br" />
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
-        <div class="container">
-          <div class="site">
-            <div class="header">
-              <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-              <a class="extra" href="/">home</a>
-            </div>
+  <title>{{ page.title }}</title>
 
-                {{ content }}
+  <meta name="robots" content="index, follow" />
 
-            <div class="footer">
-              <div class="contact">
-                <p>
-                  <strong>Mikael Carrara</strong><br />
-                  UX Designer, HE:labs &amp; Co-Founder, Coora.<br />
-                  mikael@mikaelcarrara.com
-                </p>
-              </div>
-              <div class="contact">
-                <p>
-                  <a href="http://github.com/mikaelcarrara/">github.com/mikaelcarrara</a><br />
-                  <a href="http://dribbble.com/mikaelcarrara/">dribbble.com/mikaelcarrara</a><br />
-                  <a href="http://twitter.com/mikaelcarrara/">twitter.com/mikaelcarrara</a><br />
-                  <a href="https://angel.co/mikaelcarrara">angel.co/mikaelcarrara</a>
-                </p>
-              </div>
-            </div>
-          </div>
-        </div> <!-- /container -->
+  <meta name="author" content="Mikael Carrara" />
+  <meta name="copyright" content="© 2013 Mikael Carrara. Todos os direitos reservados." />
+  <link rev="made" href="mikael@mikaelcarrara" />
 
-    </body>
+  <link rel="shortcut icon" href="/static/img/favicon.ico" />
+
+  <meta name="keywords" content="" />
+  <meta name="description" content="Considerações Sobre Web Design." />
+
+  <meta content="WebHealing" property="og:title" />
+  <meta content="http://www.mikaelcarrara.com/blog" property="og:url" />
+
+  <meta content="/img/favicon.png" property="og:image" />
+  <meta property="og:description" content="Considerações Sobre Web Design." />
+
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="stylesheet" href="/css/syntax.css">
+  <link rel="stylesheet" href="/css/style.css">
+
+</head>
+
+<body>
+
+  <header>
+  	<div class="holder">
+
+      <h1>
+        <a href="/" title="Voltar para Pág. Inicial">
+        	{{ site.name }}
+        </a>
+      </h1>
+
+  	</div>
+  </header> <!-- /header -->
+	
+	<div class="holder">
+    
+    <section id="entry">
+
+      {{ content }}
+
+    </section> <!-- /entry -->
+
+    <aside>
+
+      
+
+    </aside> <!-- /aside -->
+
+    <footer>
+      <p>&copy; 2010/2013 WebHealing. Todos os direitos reservados.</p>
+    </footer>
+
+	</div> <!-- /holder -->
+
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+	<script type="text/javascript" src="/js/wh.js"></script>
+
+</body>
+
 </html>
