--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,39 +38,42 @@
 <body>
 
   <header>
-  	<div class="holder">
+    <div class="holder">
 
-      <h1>
-        <a href="/" title="Voltar para Pág. Inicial">
-        	{{ site.name }}
-        </a>
-      </h1>
+    <h1>
+      <a href="/" title="Voltar para Pág. Inicial">
+        {{ site.name }}
+      </a>
+    </h1>
 
-  	</div>
+    </div>
   </header> <!-- /header -->
-	
-	<div class="holder">
-    
-    <section id="entry">
 
-      {{ content }}
+  <div class="holder">
 
-    </section> <!-- /entry -->
+  <section id="entry">
 
-    <aside>
+    {{ content }}
 
-      
+  </section> <!-- /entry -->
 
-    </aside> <!-- /aside -->
+  <aside>
 
-    <footer>
-      <p>&copy; 2010/2013 WebHealing. Todos os direitos reservados.</p>
-    </footer>
 
-	</div> <!-- /holder -->
 
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-	<script type="text/javascript" src="/js/wh.js"></script>
+  </aside> <!-- /aside -->
+
+  <footer>
+    <p>
+      &copy; 2013 WebHealing by Mikael Carrara.<br />
+      Todos os direitos reservados.
+    </p>
+  </footer>
+
+  </div> <!-- /holder -->
+
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+  <script type="text/javascript" src="/js/wh.js"></script>
 
 </body>
 
