Improvement on HTML structure

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 
   <link rel="shortcut icon" href="/static/img/favicon.ico" />
 
-  <meta name="keywords" content="" />
+  <meta name="keywords" content="Web Design, Interface Design, UI Design, Product Design, Design, Web Development" />
   <meta name="description" content="Considerações Sobre Web Design." />
 
   <meta content="WebHealing" property="og:title" />
@@ -51,29 +51,19 @@
 
   <div class="holder">
 
-  <section id="entry">
-
     {{ content }}
 
-  </section> <!-- /entry -->
-
-  <aside>
-
-
-
-  </aside> <!-- /aside -->
-
-  <footer>
-    <p>
-      &copy; 2013 WebHealing by Mikael Carrara.<br />
-      Todos os direitos reservados.
-    </p>
-  </footer>
+    <footer>
+      <p>
+        &copy; 2013 WebHealing by Mikael Carrara.<br />
+        Todos os direitos reservados.
+      </p>
+    </footer>
 
   </div> <!-- /holder -->
 
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-  <script type="text/javascript" src="/js/wh.js"></script>
+  <script type="text/javascript" src="/js/mc.js"></script>
 
 </body>
 
