--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,19 @@
 ---
 layout: default
 ---
-<h2>{{ page.title }}</h2>
-<p class="meta">{{ page.date | date_to_string }}</p>
+<section id="entry">
+  
+  <h2>{{ page.title }}</h2>
+  <p class="meta">{{ page.date | date_to_string }}</p>
 
-<div class="post">
-{{ content }}
-</div>
+  <div class="post">
+    {{ content }}
+  </div>
+
+</section> <!-- /entry -->
+
+<aside>
+
+  Sidebar
+
+</aside> <!-- /aside -->
