--- a/css/style.css
+++ b/css/style.css
@@ -49,3 +49,15 @@ h1, h2, h3, h4, h5, h6 {
 	font-weight: normal !important;
   margin:0;
 }
+
+
+/* Header */
+
+header {
+  width:80%;
+  height:45px;
+  background:#f1f8fc;
+  border-bottom:5px solid #ecf6fb;
+  padding:30px 10% 0 10%;
+  float:left;
+}
