--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,12 +3,17 @@ layout: default
 ---
 <section id="entry">
   
-  <h2>{{ page.title }}</h2>
-  <p class="meta">{{ page.date | date_to_string }}</p>
-
   <div class="post">
+    
+    <h2>{{ page.title }}</h2>
+
+    <p class="meta">
+      {{ page.date | date_to_string }}
+    </p>
+
     {{ content }}
-  </div>
+    
+  </div> <!-- /post -->
 
 </section> <!-- /entry -->
 
