--- a/css/style.css
+++ b/css/style.css
@@ -50,14 +50,28 @@ h1, h2, h3, h4, h5, h6 {
   margin:0;
 }
 
+h2 {
+  font:24px "Times New Roman", Times, serif;
+}
+
+
+/* Page */
+
+.holder {
+  width:80%;
+  padding:0 10% 0 10%;
+}
+
 
 /* Header */
 
 header {
-  width:80%;
+  width:100%;
   height:45px;
   background:#f1f8fc;
   border-bottom:5px solid #ecf6fb;
-  padding:30px 10% 0 10%;
+  padding:30px 0 0 0;
   float:left;
 }
+
+
