--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,9 +42,13 @@
 
     <h1>
       <a href="/" title="Voltar para Pág. Inicial">
-        {{ site.name }}
+        Web<span>Healing</a>
       </a>
     </h1>
+
+    <p class="headline">
+      Considerações sobre Web Design.
+    </p>
 
     </div>
   </header> <!-- /header -->
