--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,23 +2,19 @@
 layout: default
 ---
 <section id="entry">
-  
-  <div class="post">
     
-    <h2>{{ page.title }}</h2>
+  <h2>{{ page.title }}</h2>
 
-    <p class="meta">
-      {{ page.date | date_to_string }}
-    </p>
+  <p class="meta">
+    {{ page.date | date_to_string }}
+  </p>
 
-    {{ content }}
-    
-  </div> <!-- /post -->
+  {{ content }}
 
 </section> <!-- /entry -->
 
 <aside>
 
-  Sidebar
+  <p>Aside</p>
 
 </aside> <!-- /aside -->
