--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,15 +40,15 @@
   <header>
     <div class="holder">
 
-    <h1>
-      <a href="/" title="Voltar para Pág. Inicial">
-        Web<span>Healing</a>
-      </a>
-    </h1>
+      <h1>
+        <a href="/" title="Voltar para Pág. Inicial">
+          Web<span>Healing</a>
+        </a>
+      </h1>
 
-    <p class="headline">
-      Considerações sobre Web Design.
-    </p>
+      <p class="headline">
+        Considerações sobre Web Design.
+      </p>
 
     </div>
   </header> <!-- /header -->
@@ -59,8 +59,8 @@
 
     <footer>
       <p>
-        &copy; 2013 WebHealing by Mikael Carrara.<br />
-        Todos os direitos reservados.
+        &copy; 2013 WebHealing.<br />
+        <a href="/" title="#">Contato</a>
       </p>
     </footer>
 
