--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,18 +7,18 @@
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 
+  <title>{{ page.title }}</title>
+
   <meta http-equiv="content-language" content="pt-br" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-
-  <title>{{ page.title }}</title>
 
   <meta name="robots" content="index, follow" />
 
   <meta name="author" content="Mikael Carrara" />
   <meta name="copyright" content="© 2013 Mikael Carrara. Todos os direitos reservados." />
-  <link rev="made" href="mikael@mikaelcarrara" />
 
-  <link rel="shortcut icon" href="/static/img/favicon.ico" />
+  <link rev="made" href="mikael@mikaelcarrara" />
+  <link rel="shortcut icon" href="/img/favicon.ico" />
 
   <meta name="keywords" content="Web Design, Interface Design, UI Design, Product Design, Design, Web Development" />
   <meta name="description" content="Considerações Sobre Web Design." />
@@ -29,9 +29,9 @@
   <meta content="/img/favicon.png" property="og:image" />
   <meta property="og:description" content="Considerações Sobre Web Design." />
 
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="/css/syntax.css">
-  <link rel="stylesheet" href="/css/style.css">
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <link rel="stylesheet" href="/css/syntax.css" />
+  <link rel="stylesheet" href="/css/style.css /">
 
 </head>
 
@@ -56,6 +56,12 @@
   <div class="holder">
 
     {{ content }}
+
+    <aside>
+
+      <p>Aside</p>
+
+    </aside> <!-- /aside -->
 
     <footer>
       <p>
