--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,4 +1,9 @@
-.highlight  { background: #042b37; }
+.highlight {
+  background:#042b37;
+  padding:5px 20px 5px 20px;
+  margin:0 0 20px 0;
+}
+
 .highlight .c { color: #999988; font-style: italic } /* Comment */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
 .highlight .k { font-weight: bold } /* Keyword */
