Installed Google Web Fonts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,21 @@
   <link rel="stylesheet" href="/css/syntax.css" />
   <link rel="stylesheet" href="/css/style.css" />
 
+  <script type="text/javascript">
+    WebFontConfig = {
+      google: { families: [ 'Open+Sans:400,700:latin', 'Prata::latin' ] }
+    };
+    (function() {
+      var wf = document.createElement('script');
+      wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+        '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+      wf.type = 'text/javascript';
+      wf.async = 'true';
+      var s = document.getElementsByTagName('script')[0];
+      s.parentNode.insertBefore(wf, s);
+    })();
+  </script>
+
 </head>
 
 <body>
@@ -54,12 +69,6 @@
   </header> <!-- /header -->
 
   <div class="holder">
-
-    <aside>
-
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-
-    </aside> <!-- /aside -->
 
     {{ content }}
 
