--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,7 @@ header {
   border-bottom:5px solid #ecf6fb;
   padding:15px 0 0 0;
   margin:0 0 35px 0;
+  line-height:22px !important;
   float:left;
 }
 
