--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,7 +1,7 @@
 .highlight {
   background:#042b37;
   padding:5px 20px 5px 20px;
-  margin:0 0 20px 0;
+  margin:10px 0 30px 0;
 }
 
 .highlight .c { color: #999988; font-style: italic } /* Comment */
