Improvement on color pallet and removed h1 from home

--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ a span {
 .headline {
   margin:2px 0 0 0;
   font-size:14px;
-  color:#98c7e3;
+  color:#7da5bd;
 }
 
 
@@ -122,7 +122,7 @@ footer {
   margin:10px 0 40px 0;
   font-size:14px;
   line-height:22px !important;
-  color:#98c7e3;
+  color:#7da5bd;
   float:left;
 }
 
