--- a/stylesheet/core/_variables.scss
+++ b/stylesheet/core/_variables.scss
@@ -18,7 +18,7 @@ $light-green:     #dff0d8;
 $green:           #698d64;
 
 $light-gray:      #f7f7f7;
-$light-gray-2:    #efefef;
+$light-gray-2:    #eee;
 $light-gray-3:    #f3f3f3;
 $light-gray-4:    #ddd;
 
