--- a/stylesheet/parts/_components.scss
+++ b/stylesheet/parts/_components.scss
@@ -4,6 +4,29 @@ COMPONENTS
 */
 
 
+/* Screens list */
+
+.screens {
+  padding: 0;
+  margin: 30px 0 0 0;
+  
+  li {
+    list-style-type: none;
+    display: inline-block;
+    margin: 0 10px 0 0;
+    vertical-align: top;
+  }
+  
+  img {
+    width: 200px;
+    padding: 10px;
+    background: $white;
+    border: 1px solid $light-gray-2;
+    box-shadow: 0 1px 4px $light-gray-2;
+  }
+}
+
+
 /* CTA */
 
 .cta {
