--- a/stylesheet/parts/_content.scss
+++ b/stylesheet/parts/_content.scss
@@ -5,24 +5,21 @@ CONTENT
 
 .content {
   @extend %clearfix;
-  padding: 100px 0 0 0;
-
+  padding: 70px 0;
+  text-align: center;
+  
   h2 {
-    font-size: $font-big;
-    color: $black;
-    margin: 0 0 30px 0;
-    text-transform: uppercase;
-    text-align: center;
-    color: $red;
+    font-size: $font-bigger;
+    letter-spacing: -2px;
+    margin: 60px 0 10px 0;
   }
 
   h3 {
-    margin: 0;
-  }
-
-  h3,
-  li {
+    font-weight: normal;
     font-size: $font-medium;
+    line-height: 26px;
+    margin: 0;
+    display: none;
   }
 
   p {
