--- a/stylesheet/core/_variables.scss
+++ b/stylesheet/core/_variables.scss
@@ -8,14 +8,7 @@ VARS AND MIXINS
 
 $white:           #fff;
 $black:           #000;
-$blue:            #3183b7;
-$red:             #c63939;
-
-$light-orange:    #f2deca;
-$orange:          #e09456;
-
-$light-green:     #dff0d8;
-$green:           #698d64;
+$brand:           #008082;
 
 $light-gray:      #f7f7f7;
 $light-gray-2:    #eee;
@@ -25,10 +18,6 @@ $light-gray-4:    #ddd;
 $medium-gray:     #666;
 $medium-gray-2:   #999;
 $dark-gray:       #333;
-
-$link-color:      #66a4d9;
-$main-blue:       #3183b7;
-$main-green:      #3183b7;
 
 
 /* Font-size vars */
