--- a/stylesheet/parts/_forms.scss
+++ b/stylesheet/parts/_forms.scss
@@ -44,7 +44,7 @@ form {
     border-radius: 2px;
     height: 30px;
     line-height: 30px;
-    background: $green;
+    background: $brand;
     padding: 0 15px;
     text-transform: uppercase;
     color: $white;
