--- a/stylesheet/parts/_header.scss
+++ b/stylesheet/parts/_header.scss
@@ -4,6 +4,7 @@ HEADER
 */
 
 header {
+  border-top: 5px solid $brand;
   width: 100%;
   background: rgba($white, 1);
   height: 70px;
@@ -13,14 +14,22 @@ header {
   @extend %clearfix;
   box-shadow: 0 1px 4px $light-gray-2;
   
+  img {
+    float: left;
+    margin-top: 10px;
+    margin-right: 15px;
+    height: 50px;
+  }
+  
   h1 {
     margin: 14px 0 0 0;
     font-size: $font-large;
     line-height: 21px;
+    color: $brand;
     float: left;
     
     strong {
-      
+      letter-spacing: -1px;
     }
     
     span {
@@ -70,9 +79,4 @@ header {
   border-radius: 2px;
   padding: 4px 10px 5px 10px;
   color: rgba($medium-gray, .7);
-
-  &:hover {
-    background: $blue;
-    color: $white;
-  }
 }
