--- a/stylesheet/parts/_responsive.scss
+++ b/stylesheet/parts/_responsive.scss
@@ -25,10 +25,11 @@ body {
 
 /* Tablets */
 
-@media (max-width: 860px) {
+@media (max-width: 960px) {
 
   .holder {
     width: 700px;
+    background: red;
   }
 
 }
@@ -40,10 +41,6 @@ body {
 
   .holder {
     width: 94% !important;
-  }
-
-  .content {
-    padding: 50px 0;
   }
 
   .column-01,
