--- a/stylesheet/main.scss
+++ b/stylesheet/main.scss
@@ -24,7 +24,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: $sans-serif;
-  background: $light-gray;
+  background: $white;
   color: $dark-gray;
   font-size: $font-medium;
   margin: 0;
