--- a/stylesheet/parts/_components.scss
+++ b/stylesheet/parts/_components.scss
@@ -7,22 +7,15 @@ COMPONENTS
 /* Screens list */
 
 .screens {
-  padding: 0;
-  margin: 30px 0 0 0;
-  
-  li {
-    list-style-type: none;
+
+  a img {
+    //padding: 2px;
+    //background: $white;
+    //border: 1px solid $light-gray-2;
+    //box-shadow: 0 1px 4px $light-gray-2;
     display: inline-block;
-    margin: 0 10px 0 0;
-    vertical-align: top;
-  }
-  
-  img {
-    width: 60px;
-    padding: 10px;
-    background: $white;
-    border: 1px solid $light-gray-2;
-    box-shadow: 0 1px 4px $light-gray-2;
+    //margin: 0 5px 10px 5px;
+    //vertical-align: top;
   }
 }
 
