--- a/stylesheet/parts/_content.scss
+++ b/stylesheet/parts/_content.scss
@@ -5,13 +5,15 @@ CONTENT
 
 .content {
   @extend %clearfix;
-  padding: 70px 0;
+  padding: 120px 0 40px 0;
   text-align: center;
   
   h2 {
-    font-size: $font-bigger;
+    font-size: $font-large;
+    text-transform: uppercase;
     letter-spacing: -2px;
     margin: 60px 0 10px 0;
+    display: none;
   }
 
   h3 {
